--- a/src/BlazorNetCoreConf/BlazorNetCoreConf.Core/App.razor
+++ b/src/BlazorNetCoreConf/BlazorNetCoreConf.Core/App.razor
@@ -1,4 +1,7 @@
-﻿<Router AppAssembly="@typeof(Program).Assembly">
+﻿@using System.Reflection
+@using System
+
+<Router AppAssembly="@Assembly.GetExecutingAssembly()">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
