--- a/src/BlazorNetCoreConf/BlazorNetCoreConf.Core/Pages/FetchData.razor
+++ b/src/BlazorNetCoreConf/BlazorNetCoreConf.Core/Pages/FetchData.razor
@@ -1,7 +1,7 @@
 ﻿@page "/fetchdata"
 
-@using BlazorNetCoreConf.Data
-@using BlazorNetCoreConf.Services
+@using BlazorNetCoreConf.Core.Entities
+@using BlazorNetCoreConf.Core.Services
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
