--- a/src/BlazorNetCoreConf/BlazorNetCoreConf.Core/_Imports.razor
+++ b/src/BlazorNetCoreConf/BlazorNetCoreConf.Core/_Imports.razor
@@ -6,4 +6,4 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using BlazorNetCoreConf
-@using BlazorNetCoreConf.Shared
+@using BlazorNetCoreConf.Core.Shared
