--- a/src/BlazorNetCoreConf/BlazorNetCoreConf/Pages/_Host.cshtml
+++ b/src/BlazorNetCoreConf/BlazorNetCoreConf/Pages/_Host.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @namespace BlazorNetCoreConf.Pages
+@using BlazorNetCoreConf.Core
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -10,7 +11,6 @@
     <title>BlazorNetCoreConf</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
