--- a/src/BlazorNetCoreConf/BlazorNetCoreConf/Pages/_Host.cshtml
+++ b/src/BlazorNetCoreConf/BlazorNetCoreConf/Pages/_Host.cshtml
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlazorNetCoreConf</title>
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/site.css" rel="stylesheet" />
+    <link rel="stylesheet" href="_content/BlazorNetCoreConf.Core/css/bootstrap/bootstrap.min.css" />
+    <link href="_content/BlazorNetCoreConf.Core/css/site.css" rel="stylesheet" />
 </head>
 <body>
     <app>
